# thin_film_optics

./: .gitignore  .pylintrc  README.md  lintpy.bak  pyproject.toml
.github/workflows/: ci.yml  python-package.yml  thin-film-optics-ci.yml
src/data/: reflectance_251121b00000.txt  reflectance_251121b00007.txt
src/helpers/: fit_utils.py  loss_functions_utils.py  reflectance_utils.py  utils.py
src/thin_film_optics/: __init__.py  beam_parameters.py  beam_parameters_dict.py  effective_medium_models.py  fit_single_layers.py  layer_information.py  layer_information_dict.py  optim_multilayers.py  optim_single_layers.py  reflectance.py  refractive_index_database.py  transfer_matrix_method.py  transfer_matrix_method_dict.py
tests/unit/: test_beam_parameters.py  test_thin_film_optics.py  test_thin_film_optics_version.py  test_tmmo_layers.py
