[tool.poetry]
name = "thin-film-optics"
version = "0.1.0"
description = ""
authors = ["Leandro Acquaroli <leandro.n.acquaroli@gmail.com>"]
readme = "README.md"
packages = [{include = "thin_film_optics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
numpy = "^1.23.2"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
